# pydantic-settings-env-prefix

./: .env  pyproject.toml
src/pydantic_settings_env_prefix/: __init__.py
