[project]
name = "pydantic-settings-env-prefix"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings@git+https://github.com/pydantic/pydantic-settings@main",
]

[project.scripts]
hello = "pydantic_settings_env_prefix:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true
